--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Chapters\\": "Chapters"
+            "Chapters\\": "Chapters",
+            "Tests\\": "Tests"
         }
     }
 }
